# wrbot

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: audit.md  end-session.md  new-task.md  sync.md  take-task.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: audit.yml  ci.yml  validate.yml
alembic/: env.py
alembic/versions/: 20260531_2205_bf12de07eec5_initial_schema_with_fk_date_types.py  20260601_initial_schema.py  20260602_2307_1bbc3806ea9e_add_audit_log_table_task_0032.py  20260603_2350_a8dc0ce16341_add_wallet_icon_task_0042.py  20260603_2358_6428ace93f06_add_category_notify_chat_ids_task_0043.py  20260604_1325_866cbe85bfeb_add_currency_fields_task_0049.py
docker/: entrypoint.sh
docs/: README.md  deployment.md  glossary.md  requirements.md  roadmap.md  vision.md
docs/architecture/: README.md  components.md  data-model.md  overview.md
docs/release-notes/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md
docs/spec/: spec-v1.md
docs/templates/: audit-report.template.md  report.template.md  session-log.template.md  task.template.md
docs/workflow/: README.md  architect-guide.md  audit-protocol.md  context-preservation.md  executor-guide.md  handoff-protocol.md  session-protocol.md
handoff/: README.md
handoff/done/: TASK-0001-project-skeleton.md  TASK-0006-fix-mypy-errors.md  TASK-0007-fix-ruff-errors.md  TASK-0008-m2-callback-routing.md  TASK-0011-m3-charge-create.md  TASK-0012-m3-charge-list-actions.md  TASK-0013-charge-routing-test.md  TASK-0015-m4-reminder-message.md  TASK-0016-m4-sweep-scheduler.md  TASK-0018-m4-mypy-reminders.md  TASK-0023-m5-docs-help.md  TASK-0024-m5-edge-tests.md  TASK-0025-m5-timezone-ui.md  TASK-0027-fsm-session-lifecycle.md  TASK-0028-manual-telegram-qa.md  TASK-0029-env-var-casing-deploy.md  TASK-0031-m6-admin-channel.md  TASK-0032-m6-audit-log.md  (+8 more)
repositories/: __init__.py
scripts/: README.md  bootstrap.py  complete_task.py  lib.py  new_session.py  new_task.py  take_task.py  update_state.py  validate.py
services/: __init__.py
sessions/: README.md  SESSION-2026-05-31-01.md  SESSION-2026-05-31-02.md  SESSION-2026-05-31-03.md  SESSION-2026-05-31-04.md  SESSION-2026-06-01-01.md  SESSION-2026-06-01-02.md  SESSION-2026-06-01-03.md  SESSION-2026-06-01-04.md  SESSION-2026-06-01-05.md  SESSION-2026-06-01-06.md  SESSION-2026-06-01-07.md  SESSION-2026-06-01-08.md  SESSION-2026-06-01-09.md  SESSION-2026-06-01-10.md  SESSION-2026-06-01-11.md  SESSION-2026-06-01-12.md  SESSION-2026-06-01-13.md  SESSION-2026-06-01-14.md  SESSION-2026-06-01-15.md  SESSION-2026-06-01-16.md  SESSION-2026-06-01-17.md  SESSION-2026-06-01-18.md  SESSION-2026-06-01-19.md  SESSION-2026-06-01-20.md  SESSION-2026-06-01-21.md  SESSION-2026-06-01-22.md  SESSION-2026-06-01-23.md  SESSION-2026-06-01-24.md  SESSION-2026-06-01-25.md  SESSION-2026-06-01-26.md  SESSION-2026-06-01-27.md  SESSION-2026-06-01-28.md  SESSION-2026-06-01-29.md  SESSION-2026-06-01-30.md  SESSION-2026-06-01-31.md  SESSION-2026-06-01-32.md  SESSION-2026-06-01-33.md  SESSION-2026-06-01-34.md  SESSION-2026-06-01-35.md  (+52 more)
src/: README.md
src/wrbot/: __init__.py  (+4 more)
state/: CHANGELOG.md  README.md  backlog.json  project.json  project.schema.json
tests/: __init__.py  conftest.py  test_admin_notify.py  test_audit_log.py  test_backup.py  test_callback_routing.py  test_charts.py  test_config.py  test_currencies.py  test_dates.py  test_db_schema.py  test_e2e_smoke.py  test_edge_scenarios.py  test_error_handling.py  test_formatters.py  test_fsm_session_lifecycle.py  test_handlers_categories.py  test_handlers_global_notify.py  test_handlers_reminders.py  test_handlers_settings.py  test_handlers_timezone.py  test_handlers_wallets.py  test_imports.py  test_reminders_logic.py  test_repositories_categories.py  test_repositories_charges.py  test_repositories_sent_reminders.py  test_repositories_users.py  test_repositories_wallets.py  test_stats.py  test_sweep.py  test_texts_render.py
(+148 files in other folders)
