[project]
name = "wrbot"
version = "0.1.0"
description = "Telegram bot for recurring charges reminders"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "nmetluk" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Chat",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Telegram bot framework
    "aiogram>=3.13.0",
    # Scheduler for reminders
    "apscheduler>=3.11.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",  # PostgreSQL driver
    "aiosqlite>=0.20.0",  # SQLite driver for local dev
    # Environment variables
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    # Code quality
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    # Pydantic for mypy
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
wrbot = "wrbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate commented-out code
    "RUF", # ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module (handled by separate check)
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "ANN001", # Missing type annotation for function argument
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "RUF002", # Cyrillic letters in docstrings/comments - expected for Russian project
    "RUF001", # Emoji/symbols in UI strings - expected for bot interface
    "RUF003", # Cyrillic letters in comments - expected for Russian project
    "ERA001", # Commented-out code for TODO notes
    "ARG001", # Unused function arguments in stubs (will be used in M2-M4)
]

[tool.ruff.lint.isort]
known-first-party = ["wrbot"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101"]
"src/wrbot/logging.py" = ["E501"]  # Log format strings are long
"src/wrbot/config.py" = ["ANN401"]  # Pydantic Any types

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\)",
    "@(abc\\.)?abstractmethod",
]
